--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.0.1",
   "description": "Html to pdf",
   "main": "main.js",
-  "keywords": [],
+  "keywords": ["html-to-pdf"],
   "author": "Hamza Sabljakovic",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "puppeteer": "^2.1.1"
+  },
+  "repository": {
+    "url": "https://github.com/sabljakovich/html-to-pdf"
   }
 }
